--- a/app/src/main/res/layout/activity_input1.xml
+++ b/app/src/main/res/layout/activity_input1.xml
@@ -1,168 +1,175 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
     android:fillViewport="true"
-    tools:context="id.zakafikry.ewaris.InputActivity.InputActivity1"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    tools:context="id.zakafikry.ewaris.InputActivity.InputActivity1">
 
-    <TextView
-        android:id="@+id/tvTittle1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_marginTop="8dp"
-        android:text="Data Muwarrits"
-        android:textAppearance="@style/TextAppearance.AppCompat"
-        android:textSize="18sp" />
-
-    <TextView
-        android:id="@+id/tvGender"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="32dp"
-        android:layout_marginTop="24dp"
-        android:text="Jenis Kelamin"
-        android:textAppearance="@style/TextAppearance.AppCompat"
-        android:textSize="16sp" />
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
-    <RadioGroup
-        android:id="@+id/rgGender"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="24dp"
-        android:layout_marginTop="2dp"
-        android:orientation="horizontal">
-
-        <RadioButton
-            android:id="@+id/rbMale"
+        <TextView
+            android:id="@+id/tvTittle1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/tvGender"
-            android:layout_weight="1"
-            android:text="Laki-laki"
+            android:layout_gravity="center"
+            android:layout_marginTop="8dp"
+            android:text="Data Mayit"
+            android:textAppearance="@style/TextAppearance.AppCompat"
+            android:textSize="24sp"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/tvGender"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="32dp"
+            android:layout_marginTop="8dp"
+            android:text="Jenis Kelamin"
+            android:textAppearance="@style/TextAppearance.AppCompat"
             android:textSize="16sp" />
 
-        <RadioButton
-            android:id="@+id/rbFemale"
+        <RadioGroup
+            android:id="@+id/rgGender"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/tvGender"
-            android:layout_marginLeft="10dp"
-            android:layout_weight="1"
-            android:text="Perempuan"
-            android:textSize="16sp" />
-    </RadioGroup>
+            android:layout_marginLeft="24dp"
+            android:layout_marginTop="2dp"
+            android:orientation="horizontal">
 
-    <TextView
-        android:id="@+id/tvTirkah"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="32dp"
-        android:layout_marginTop="24dp"
-        android:text="Jumlah Harta yang ditinggalkan (Tirkah)"
-        android:textAppearance="@style/TextAppearance.AppCompat"
-        android:textSize="16sp" />
+            <RadioButton
+                android:id="@+id/rbMale"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/tvGender"
+                android:layout_weight="1"
+                android:text="Laki-laki"
+                android:textSize="16sp" />
 
-    <EditText
-        android:id="@+id/etTirkah"
-        android:layout_width="250dp"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="32dp"
-        android:layout_marginTop="2dp"
-        android:ems="10"
-        android:inputType="numberDecimal"
-        android:textAppearance="@style/TextAppearance.AppCompat" />
+            <RadioButton
+                android:id="@+id/rbFemale"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/tvGender"
+                android:layout_marginLeft="10dp"
+                android:layout_weight="1"
+                android:text="Perempuan"
+                android:textSize="16sp" />
+        </RadioGroup>
 
-    <TextView
-        android:id="@+id/tvHutang"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="32dp"
-        android:layout_marginTop="24dp"
-        android:text="Hutang"
-        android:textAppearance="@style/TextAppearance.AppCompat"
-        android:textSize="16sp" />
-
-    <EditText
-        android:id="@+id/etHutang"
-        android:layout_width="250dp"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="32dp"
-        android:layout_marginTop="2dp"
-        android:ems="10"
-        android:inputType="number"
-        android:textAppearance="@style/TextAppearance.AppCompat" />
-
-    <TextView
-        android:id="@+id/tvTajhiz"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="32dp"
-        android:layout_marginTop="24dp"
-        android:text="Biaya mengurus jenazah (Tajhiz)"
-        android:textAppearance="@style/TextAppearance.AppCompat"
-        android:textSize="16sp" />
-
-    <EditText
-        android:id="@+id/etTajhiz"
-        android:layout_width="250dp"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="32dp"
-        android:layout_marginTop="2dp"
-        android:ems="10"
-        android:inputType="numberDecimal"
-        android:textAppearance="@style/TextAppearance.AppCompat" />
-
-    <TextView
-        android:id="@+id/tvWasiat"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="32dp"
-        android:layout_marginTop="24dp"
-        android:text="Wasiat"
-        android:textAppearance="@style/TextAppearance.AppCompat"
-        android:textSize="16sp" />
-
-    <EditText
-        android:id="@+id/etWasiat"
-        android:layout_width="250dp"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="32dp"
-        android:layout_marginTop="2dp"
-        android:ems="10"
-        android:inputType="numberDecimal"
-        android:textAppearance="@style/TextAppearance.AppCompat" />
-
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-        <Button
-            android:id="@+id/btnPrevF1"
+        <TextView
+            android:id="@+id/tvTirkah"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="32dp"
-            android:layout_marginStart="32dp"
-            android:text="Home"
-            android:layout_centerVertical="true"
+            android:layout_marginTop="16dp"
+            android:text="Jumlah Harta Peninggalan (Tirkah)"
+            android:textAppearance="@style/TextAppearance.AppCompat"
+            android:textSize="16sp" />
+
+        <EditText
+            android:id="@+id/etTirkah"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="32dp"
+            android:layout_marginRight="32dp"
+            android:ems="10"
+            android:inputType="numberDecimal"
+            android:textAppearance="@style/TextAppearance.AppCompat" />
+
+        <TextView
+            android:id="@+id/tvHutang"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="32dp"
+            android:layout_marginTop="16dp"
+            android:text="Hutang"
+            android:textAppearance="@style/TextAppearance.AppCompat"
+            android:textSize="16sp" />
+
+        <EditText
+            android:id="@+id/etHutang"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="32dp"
+            android:layout_marginRight="32dp"
+            android:ems="10"
+            android:inputType="number"
+            android:textAppearance="@style/TextAppearance.AppCompat" />
+
+        <TextView
+            android:id="@+id/tvTajhiz"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="32dp"
+            android:layout_marginTop="16dp"
+            android:text="Biaya Pemakaman (Tajhiz)"
+            android:textAppearance="@style/TextAppearance.AppCompat"
+            android:textSize="16sp" />
+
+        <EditText
+            android:id="@+id/etTajhiz"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="32dp"
+            android:layout_marginRight="32dp"
+            android:ems="10"
+            android:inputType="numberDecimal"
+            android:textAppearance="@style/TextAppearance.AppCompat" />
+
+        <TextView
+            android:id="@+id/tvWasiat"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="32dp"
+            android:layout_marginTop="16dp"
+            android:text="Wasiat (Maks : 1/3)"
+            android:textAppearance="@style/TextAppearance.AppCompat"
+            android:textSize="16sp" />
+
+        <EditText
+            android:id="@+id/etWasiat"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="32dp"
+            android:layout_marginRight="32dp"
+            android:ems="10"
+            android:inputType="numberDecimal"
+            android:textAppearance="@style/TextAppearance.AppCompat" />
+
+    </LinearLayout>
+
+        <Button
+            android:id="@+id/btnPrevF1"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_alignParentBottom="true"
             android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true" />
+            android:layout_alignParentStart="true"
+            android:layout_centerVertical="true"
+            android:layout_marginBottom="8dp"
+            android:layout_marginLeft="32dp"
+            android:background="@drawable/home"
+            android:gravity="bottom" />
 
         <Button
             android:id="@+id/btnNext1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignBaseline="@+id/btnPrevF1"
-            android:layout_alignBottom="@+id/btnPrevF1"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_alignParentBottom="true"
             android:layout_alignParentEnd="true"
             android:layout_alignParentRight="true"
-            android:layout_marginEnd="32dp"
+            android:layout_centerVertical="true"
+            android:layout_marginBottom="8dp"
             android:layout_marginRight="32dp"
-            android:text="Next" />
+            android:background="@drawable/next2"
+            android:gravity="bottom" />
 
-    </RelativeLayout>
-</LinearLayout>
+</RelativeLayout>
 
