--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorPrimaryA">#3F51B5</color>
+    <color name="colorPrimaryDarkA">#303F9F</color>
+    <color name="colorAccentA">#FF4081</color>
+
+    <color name="colorPrimary">#171A1C</color>
+    <color name="colorPrimaryDark">#4E873D</color>
+    <color name="colorAccent">#171A1C</color>
+
+    <color name="white">#FFFFFF</color>
+    <color name="black">#000000</color>
+    <color name="cyan">#00fff0</color>
+
+    <color name="greencomb">#4E873D</color>
+    <color name="blackcomb">#171A1C</color>
+    <color name="bluecomb">#AFBFDC</color>
 </resources>
