--- a/app/src/main/res/layout/activity_input2.xml
+++ b/app/src/main/res/layout/activity_input2.xml
@@ -1,161 +1,160 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="id.zakafikry.ewaris.InputActivity.InputActivity2"
     android:orientation="vertical">
-    <TextView
-        android:id="@+id/tvIrts"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="18sp"
-        android:layout_marginTop="8dp"
-        android:layout_marginLeft="32dp"
-        android:text="Jumlah Harta yang siap dibagi :"
-        android:textAppearance="@style/TextAppearance.AppCompat" />
 
-    <TextView
-        android:id="@+id/tvNominal"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="18sp"
-        android:layout_marginLeft="32dp"
-        android:text="Rp. 1.000.000"
-        android:textAppearance="@style/TextAppearance.AppCompat" />
-    <TextView
-        android:id="@+id/tvTittle2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:textSize="20sp"
-        android:layout_gravity="center"
-        android:text="Keluarga Terdekat"
-        android:textAppearance="@style/TextAppearance.AppCompat" />
-
-
-
-    <RelativeLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="32dp"
-        android:layout_marginTop="32dp"
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:orientation="vertical">
 
+        <TextView
+            android:id="@+id/tvIrts"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="32dp"
+            android:layout_marginTop="8dp"
+            android:text="Harta yang Siap dibagi (Al - Irts) :"
+            android:textAppearance="@style/TextAppearance.AppCompat" />
+
+        <TextView
+            android:id="@+id/tvNominal"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="32dp"
+            android:text="Rp. 1.000.000"
+            android:textAppearance="@style/TextAppearance.AppCompat" />
+
+        <TextView
+            android:id="@+id/tvTittle2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:text="Keluarga Terdekat"
+            android:textAppearance="@style/TextAppearance.AppCompat"
+            android:textSize="24sp"
+            android:textStyle="bold" />
+
+        <RelativeLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="24dp"
+            android:layout_marginTop="16dp"
+            android:orientation="vertical">
+
+            <CheckBox
+                android:id="@+id/cbAyah"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Ayah"
+                android:textSize="18sp" />
+
+            <CheckBox
+                android:id="@+id/cbIbu"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentTop="true"
+
+                android:layout_marginLeft="64dp"
+                android:layout_marginStart="64dp"
+                android:layout_toEndOf="@+id/cbAyah"
+                android:layout_toRightOf="@+id/cbAyah"
+                android:text="Ibu"
+                android:textSize="18sp" />
+
+        </RelativeLayout>
+
         <CheckBox
-            android:id="@+id/cbAyah"
+            android:id="@+id/cbSuami"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="24dp"
+            android:layout_marginTop="16dp"
+            android:text="Suami"
+            android:textSize="18sp" />
+
+        <TextView
+            android:id="@+id/tvIstri"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Ayah"
-            android:textSize="18sp"/>
+            android:layout_marginLeft="32dp"
+            android:layout_marginTop="16dp"
+            android:text="Istri"
+            android:textAppearance="@style/TextAppearance.AppCompat"
+            android:textSize="18sp" />
 
-        <CheckBox
-            android:id="@+id/cbIbu"
-            android:layout_width="wrap_content"
+        <EditText
+            android:id="@+id/etIstri"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="18sp"
-
-            android:layout_alignParentTop="true"
-            android:layout_marginLeft="41dp"
-            android:layout_marginStart="41dp"
-            android:layout_toEndOf="@+id/cbAyah"
-            android:layout_toRightOf="@+id/cbAyah"
-            android:text="Ibu" />
-
-    </RelativeLayout>
-
-    <CheckBox
-        android:id="@+id/cbSuami"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textSize="18sp"
-        android:layout_marginTop="32dp"
-        android:layout_marginLeft="24dp"
-        android:text="Suami" />
-
-    <TextView
-        android:id="@+id/tvIstri"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="18sp"
-        android:layout_marginTop="8dp"
-        android:layout_marginLeft="32dp"
-        android:text="Istri"
-        android:textAppearance="@style/TextAppearance.AppCompat" />
-
-    <EditText
-        android:id="@+id/etIstri"
-        android:layout_width="250dp"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="32dp"
-        android:ems="10"
-        android:inputType="numberDecimal" />
-
-    <TextView
-        android:id="@+id/tvAnakLk"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textSize="18sp"
-        android:layout_marginTop="8dp"
-        android:layout_marginLeft="32dp"
-        android:text="Anak Laki-laki"
-        android:textAppearance="@style/TextAppearance.AppCompat" />
-
-    <EditText
-        android:id="@+id/etAnakLk"
-        android:layout_width="250dp"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="32dp"
-        android:ems="10"
-        android:inputType="numberDecimal" />
-
-    <TextView
-        android:id="@+id/tvAnakPr"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textSize="18sp"
-        android:layout_marginTop="8dp"
-        android:layout_marginLeft="32dp"
-        android:text="Anak Perempuan"
-        android:textAppearance="@style/TextAppearance.AppCompat" />
-
-    <EditText
-        android:id="@+id/etAnakPr"
-        android:layout_width="250dp"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="32dp"
-        android:ems="10"
-        android:inputType="numberDecimal" />
-
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-        <Button
-            android:id="@+id/btnNext2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="32dp"
+            android:layout_marginLeft="32dp"
             android:layout_marginRight="32dp"
-            android:layout_marginBottom="8dp"
-            android:text="Next"
-            android:layout_alignBaseline="@+id/btnPrev2"
-            android:layout_alignBottom="@+id/btnPrev2"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentEnd="true" />
+            android:ems="10"
+            android:inputType="numberDecimal" />
 
-        <Button
-            android:id="@+id/btnPrev2"
-            android:layout_width="wrap_content"
+        <TextView
+            android:id="@+id/tvAnakLk"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="34dp"
-            android:layout_marginStart="34dp"
-            android:text="Prev"
-            android:layout_centerVertical="true"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true" />
-    </RelativeLayout>
+            android:layout_marginLeft="32dp"
+            android:layout_marginTop="16dp"
+            android:text="Anak Laki-laki"
+            android:textAppearance="@style/TextAppearance.AppCompat"
+            android:textSize="18sp" />
 
+        <EditText
+            android:id="@+id/etAnakLk"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="32dp"
+            android:layout_marginRight="32dp"
+            android:ems="10"
+            android:inputType="numberDecimal" />
 
-</LinearLayout>
+        <TextView
+            android:id="@+id/tvAnakPr"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="32dp"
+            android:layout_marginTop="16dp"
+            android:text="Anak Perempuan"
+            android:textAppearance="@style/TextAppearance.AppCompat"
+            android:textSize="18sp" />
+
+        <EditText
+            android:id="@+id/etAnakPr"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="32dp"
+            android:layout_marginRight="32dp"
+            android:ems="10"
+            android:inputType="numberDecimal" />
+
+    </LinearLayout>
+
+    <Button
+        android:id="@+id/btnPrev2"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginBottom="8dp"
+        android:layout_marginLeft="32dp"
+        android:layout_marginStart="32dp"
+        android:background="@drawable/prev2" />
+
+    <Button
+        android:id="@+id/btnNext2"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="32dp"
+        android:layout_marginRight="32dp"
+        android:background="@drawable/next2" />
+
+</RelativeLayout>
