--- a/app/src/main/res/layout/activity_intro.xml
+++ b/app/src/main/res/layout/activity_intro.xml
@@ -3,56 +3,54 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/bluecomb"
+    android:background="@color/white"
     android:weightSum="4"
-    tools:context="id.zakafikry.ewaris.MainActivity">
-
+    tools:context="id.zakafikry.ewaris.IntroActivity.IntroActivity">
 
     <RelativeLayout
-        android:id="@+id/relativeLayout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
         android:layout_margin="32dp">
 
         <Button
-            android:id="@+id/btnIntro"
+            android:id="@+id/btnFaraid"
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
-            android:background="@drawable/pengenalan" />
+            android:background="@drawable/hitung2" />
 
         <Button
-            android:id="@+id/btnStart"
+            android:id="@+id/btnDalil"
             android:layout_width="100dp"
             android:layout_height="100dp"
-            android:layout_above="@+id/btnAbout"
+            android:layout_alignEnd="@+id/btnFaraid"
             android:layout_alignParentEnd="true"
             android:layout_alignParentRight="true"
-            android:background="@drawable/hitung1" />
+            android:layout_alignRight="@+id/btnFaraid"
+            android:background="@drawable/quran"
+            android:textColor="@color/white" />
 
         <Button
-            android:id="@+id/btnHelp"
+            android:id="@+id/btnAhliWaris"
             android:layout_width="100dp"
             android:layout_height="100dp"
-            android:layout_alignBottom="@+id/btnAbout"
-            android:layout_alignLeft="@+id/btnStart"
-            android:layout_alignStart="@+id/btnStart"
-            android:background="@drawable/help" />
-
-        <Button
-            android:id="@+id/btnAbout"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:layout_alignLeft="@+id/btnIntro"
-            android:layout_alignStart="@+id/btnIntro"
-            android:layout_below="@+id/btnIntro"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_below="@+id/btnFaraid"
             android:layout_marginTop="128dp"
-            android:background="@drawable/about" />
+            android:background="@drawable/family" />
 
-
+        <Button
+            android:id="@+id/btnFamilyTree"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:layout_alignBottom="@+id/btnAhliWaris"
+            android:layout_alignLeft="@id/btnDalil"
+            android:layout_alignStart="@id/btnDalil"
+            android:background="@drawable/familytree2" />
     </RelativeLayout>
 
 </RelativeLayout>
